# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff_builder.py  gendiff.py  load.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: diff_builder.py  gendiff.py  load.py
scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1_test.json  file2_test.json  file3_test.json  file3_test.yaml
tests/test_data/: file1_test.json  file1_test.yaml  file2_test.yaml  file3_test.json
