[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.gendiff:main"

[tool.ruff]
line-length = 80

[lint.per-file-ignores]
  # init modules can contain the local imports, logic, unused imports
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[lint]
preview = true
select = ["E", "F", "I", "C90"]
